Fix margins and spacing between flex items

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -50,14 +50,19 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  margin: 0;
+  padding: 0;
   gap: 16px;
 }
 
 .leftside {
   display:flex;
+  align-items:center;
+  gap: 16px;
 }
 
 .rightside {
   display: flex;
   gap: 16px;
+  align-items: center;
 }
